<resources>
    <string name="app_name">My Application</string>
    <string name="welcome_back">Welcome Back to Your App</string>
    <string name="ui_channel">Ui Lover Channel</string>
    <string name="all_in_on">All In On You Need</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="text_account">Create Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_password">Re-Password</string>
    <string name="signup_btn">Already have an account?Sign in</string>
    <string name="welcome_text">Welcome Back</string>
    <string name="email1">Email</string>
    <string name="signup_with_google">SignUp With Google</string>
    <string name="signup_with_facebook">SignUp With Facebook</string>
    <string name="are_you_new_user_register">Are You New User?Register</string>
</resources>